<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme">

    <TextView
        android:id="@+id/dialog_title_in_marker_params_dialog"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@string/font_family_medium"
        android:text="@string/dialog_title_in_on_marker_click_dialog_fragment"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/marker_title_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:theme="@style/DialogTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title_in_marker_params_dialog">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/marker_title_in_on_marker_click_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marker_title_hint_in_on_marker_click_dialog_fragment"
            android:inputType="textShortMessage"
            android:singleLine="true"
            android:textAlignment="viewStart" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/marker_description_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:theme="@style/DialogTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marker_title_text_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/marker_description_in_on_marker_click_dialog_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cancel_button"
            android:layout_alignParentStart="true"
            android:hint="@string/marker_description_hint_in_on_marker_click_dialog_fragment"
            android:inputType="textMultiLine"
            android:textColorLink="@color/secondaryColor" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>